--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,7 @@
 
     <!-- Stylesheet for Semantic UI -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -40,4 +41,17 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDj-Wlw5dHvRE_64dLqdGoy03EoSbOueGM",
+        authDomain: "fir-chat-36131.firebaseapp.com",
+        databaseURL: "https://fir-chat-36131.firebaseio.com",
+        projectId: "fir-chat-36131",
+        storageBucket: "",
+        messagingSenderId: "473992336854"
+      };
+      firebase.initializeApp(config);
+    </script>
 </html>
